/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2015-01-05
Make new branch advance_develop_2 and merge branch advance_develop into it
masterのリビジョン"accept pull request #11 and modify tools/fconv/src/Makefile.am"
より新たにブランチadvance_develop_2を作成し、そのブランチにブランチadvance_develop
をマージした。

------------------
2014-12-25
accept pull request #11 and modify tools/fconv/src/Makefile.am

------------------
2014-12-10
Add message when CellID and BCflagID were converted in FCONV
FCONVのMxN変換およびMx1変換において、読み込んだ各ランクのCellIDとBCflagIDが
ランク0のCellIDとBCflagIDに変換される時、メッセージを出力するようにした。

------------------
2014-12-09
Make modifications to CellID and BCflagID
クラスcdm_RankのCellIDと境界IDをランク毎に設定するように修正した。
また、メソッドWriteProcDfiFileにおける引数out_hostのデフォルトをなくし、
引数の順序を変更した。

------------------
2014-12-09
Add CellID and BCflagID in class cdm_Rank
クラスcdm_RankにCellIDと境界IDを示すメンバ変数c_id,bc_idを追加し、
proc.dfiのProcessのところにこれらのIDを表示するようにした。

------------------
2014-12-02
add examples

------------------
2014-12-01
accept pull request #10

------------------
2014-11-29
Merge master into branch advance_develop
masterのリビジョン"accept pull request #9"をブランチadvance_developにマージした。
Plot3d対応で追加修正した部分を不等間隔格子対応に取り込むため。
その際、競合が発生したファイルが存在したので解決した。

------------------
2014-11-28
Minor correction about print statements in class cdm_NonUniformDomain
クラスcdm_NonUniformDomain内にあるprint文の訂正を行った。

------------------
2014-11-21
Add CoordinateFileEndian and edit class cdm_NonUniformDomain
不等間隔格子の場合に座標ファイルのエンディアンを示す変数CoordinateFileEndian
を追加した。また、クラスcdm_NonUniformDomainのコードおよびコメント文の
整理を行った。

------------------
2014-11-18
Edit path setting for coordinate file and add check for coordinates
座標ファイルのパス指定をDFIのディレクトリからの相対パス、もしくは絶対パス
で指定できるようにした。
また、WriteInit時に引数に与える座標配列がアロケートされているかの
チェックや、ReadInit時に座標ファイル内の座標データ数のチェックを加えた。

------------------
2014-11-17