@@ -149,108 +149,107 @@ namespace CDM
 /** CDMのエラーコード */
   enum E_CDM_ERRORCODE
   {
-    E_CDM_SUCCESS                           = 1    ///< 正常終了
-,   E_CDM_ERROR                             = -1   ///< エラー終了
-,   E_CDM_ERROR_READ_DFI_GLOBALORIGIN       = 1000 ///< DFI GlobalOrigin 読込みエラー
-,   E_CDM_ERROR_READ_DFI_GLOBALREGION       = 1001 ///< DFI GlobalRegion 読込みエラー
-,   E_CDM_ERROR_READ_DFI_GLOBALVOXEL        = 1002 ///< DFI GlobalVoxel 読込みエラー
-,   E_CDM_ERROR_READ_DFI_GLOBALDIVISION     = 1003 ///< DFI GlobalDivision 読込みエラー
-,   E_CDM_ERROR_READ_DFI_DIRECTORYPATH      = 1004 ///< DFI DirectoryPath 読込みエラー
-,   E_CDM_ERROR_READ_DFI_TIMESLICEDIRECTORY = 1005 ///< DFI TimeSliceDirectoryPath 読込みエラー
-,   E_CDM_ERROR_READ_DFI_PREFIX             = 1006 ///< DFI Prefix 読込みエラー
-,   E_CDM_ERROR_READ_DFI_FILEFORMAT         = 1007 ///< DFI FileFormat 読込みエラー
-,   E_CDM_ERROR_READ_DFI_GUIDECELL          = 1008 ///< DFI GuideCell 読込みエラー
-,   E_CDM_ERROR_READ_DFI_DATATYPE           = 1009 ///< DFI DataType 読込みエラー
-,   E_CDM_ERROR_READ_DFI_ENDIAN             = 1010 ///< DFI Endian 読込みエラー
-//,   E_CDM_ERROR_READ_DFI_ARRAYSHAPE         = 1011 ///< DFI ArrayShape 読込みエラー
-,   E_CDM_ERROR_READ_DFI_NUMVARIABLES       = 1012 ///< DFI NumVariables 読込みエラー
-,   E_CDM_ERROR_READ_DFI_FILEPATH_PROCESS   = 1013 ///< DFI FilePath/Process 読込みエラー
-,   E_CDM_ERROR_READ_DFI_NO_RANK            = 1014 ///< DFI Rank要素なし
-,   E_CDM_ERROR_READ_DFI_ID                 = 1015 ///< DFI ID 読込みエラー
-,   E_CDM_ERROR_READ_DFI_HOSTNAME           = 1016 ///< DFI HoatName 読込みエラー
-,   E_CDM_ERROR_READ_DFI_VOXELSIZE          = 1017 ///< DFI VoxelSize 読込みエラー
-,   E_CDM_ERROR_READ_DFI_HEADINDEX          = 1018 ///< DFI HeadIndex 読込みエラー
-,   E_CDM_ERROR_READ_DFI_TAILINDEX          = 1019 ///< DFI TailIndex 読込みエラー
-,   E_CDM_ERROR_READ_DFI_CELLID             = 1020 ///< DFI CellID 読込みエラー
-,   E_CDM_ERROR_READ_DFI_BCFLAGID           = 1021 ///< DFI BCflagID 読込みエラー
-,   E_CDM_ERROR_READ_DFI_NO_SLICE           = 1022 ///< DFI TimeSlice要素なし
-,   E_CDM_ERROR_READ_DFI_STEP               = 1023 ///< DFI Step 読込みエラー
-,   E_CDM_ERROR_READ_DFI_TIME               = 1024 ///< DFI Time 読込みエラー
-,   E_CDM_ERROR_READ_DFI_NO_MINMAX          = 1025 ///< DFI MinMax要素なし
-,   E_CDM_ERROR_READ_DFI_MIN                = 1026 ///< DFI Min 読込みエラー
-,   E_CDM_ERROR_READ_DFI_MAX                = 1027 ///< DFI Max 読込みエラー
-,   E_CDM_ERROR_READ_DFI_DFITYPE            = 1028 ///< DFI DFIType 読込みエラー
-,   E_CDM_ERROR_READ_DFI_FIELDFILENAMEFORMAT= 1029 ///< DFI FieldfilenameFormat 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILE         = 1030 ///< DFI Coordinate File 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILETYPE     = 1031 ///< DFI Coordinate File Type 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILEPRECISION= 1032 ///< DFI Coordinate File Precision 読込みエラー
-,   E_CDM_ERROR_READ_DFI_COORDINATEFILEENDIAN   = 1033 ///< DFI Coordinate File Endian 読込みエラー
-,   E_CDM_ERROR_OPEN_COORDINATEFILE             = 1034 ///< Coordinate File オープンに失敗
-,   E_CDM_ERROR_READ_COORDINATEFILE             = 1035 ///< Coordinate File 読込みエラー
-,   E_CDM_ERROR_READ_INDEXFILE_OPENERROR    = 1050 ///< Indexファイルオープンエラー
-,   E_CDM_ERROR_TEXTPARSER                  = 1051 ///< TextParserエラー
-,   E_CDM_ERROR_READ_FILEINFO               = 1052 ///< FileInfo読込みエラー
-,   E_CDM_ERROR_READ_FILEPATH               = 1053 ///< FilePath読込みエラー
-,   E_CDM_ERROR_READ_UNIT                   = 1054 ///< UNIT読込みエラー
-,   E_CDM_ERROR_READ_TIMESLICE              = 1055 ///< TimeSlice読込みエラー
-,   E_CDM_ERROR_READ_PROCFILE_OPENERROR     = 1056 ///< Procファイルオープンエラー
-,   E_CDM_ERROR_READ_DOMAIN                 = 1057 ///< Domain読込みエラー
-,   E_CDM_ERROR_READ_MPI                    = 1058 ///< MPI読込みエラー
-,   E_CDM_ERROR_READ_PROCESS                = 1059 ///< Process読込みエラー
-,   E_CDM_ERROR_READ_FIELDDATA_FILE         = 1900 ///< フィールドデータファイル読込みエラー
-,   E_CDM_ERROR_READ_SPH_FILE               = 2000 ///< SPHファイル読込みエラー
-,   E_CDM_ERROR_READ_SPH_REC1               = 2001 ///< SPHファイルレコード1読込みエラー
-,   E_CDM_ERROR_READ_SPH_REC2               = 2002 ///< SPHファイルレコード2読込みエラー
-,   E_CDM_ERROR_READ_SPH_REC3               = 2003 ///< SPHファイルレコード3読込みエラー
-,   E_CDM_ERROR_READ_SPH_REC4               = 2004 ///< SPHファイルレコード4読込みエラー
-,   E_CDM_ERROR_READ_SPH_REC5               = 2005 ///< SPHファイルレコード5読込みエラー
-,   E_CDM_ERROR_READ_SPH_REC6               = 2006 ///< SPHファイルレコード6読込みエラー
-,   E_CDM_ERROR_READ_SPH_REC7               = 2007 ///< SPHファイルレコード7読込みエラー
-,   E_CDM_ERROR_UNMATCH_VOXELSIZE           = 2050 ///< SPHのボクセルサイズとDFIのボクセルサイズが合致しない
-,   E_CDM_ERROR_NOMATCH_ENDIAN              = 2051 ///< 出力Fornatが合致しない（Endian形式がBig,Little以外）
-,   E_CDM_ERROR_UNMATCH_NUM_OF_VARIABLES    = 2052 ///< フィールドデータの変数の個数と登録された変数名の個数が合致しない
-,   E_CDM_ERROR_NUM_OF_GUIDECELLS           = 2053 ///< フィールドデータのガイドセル値エラー
-,   E_CDM_ERROR_READ_BOV_FILE               = 2100 ///< BOVファイル読込みエラー
-,   E_CDM_ERROR_READ_FIELD_HEADER_RECORD    = 2102 ///< フィールドヘッダーレコード読込み失敗
-,   E_CDM_ERROR_READ_FIELD_DATA_RECORD      = 2103 ///< フィールドデータレコード読込み失敗
-,   E_CDM_ERROR_READ_FIELD_AVERAGED_RECORD  = 2104 ///< フィールドAverage読込み失敗
-//,   E_CDM_ERROR_DATATYPE                    = 2500 ///< DataType error
-,   E_CDM_ERROR_MISMATCH_NP_SUBDOMAIN       = 3003 ///< 並列数とサブドメイン数が一致していない
-,   E_CDM_ERROR_INVALID_DIVNUM              = 3011 ///< 領域分割数が不正
-,   E_CDM_ERROR_OPEN_SBDM                   = 3012 ///< ActiveSubdomainファイルのオープンに失敗
-,   E_CDM_ERROR_READ_SBDM_HEADER            = 3013 ///< ActiveSubdomainファイルのヘッダー読み込みに失敗
-,   E_CDM_ERROR_READ_SBDM_FORMAT            = 3014 ///< ActiveSubdomainファイルのフォーマットエラー
-,   E_CDM_ERROR_READ_SBDM_DIV               = 3015 ///< ActiveSubdomainファイルの領域分割数読み込みに失敗
-,   E_CDM_ERROR_READ_SBDM_CONTENTS          = 3016 ///< ActiveSubdomainファイルのContents読み込みに失敗
-,   E_CDM_ERROR_SBDM_NUMDOMAIN_ZERO         = 3017 ///< ActiveSubdomainファイルの活性ドメイン数が0
-,   E_CDM_ERROR_MAKEDIRECTORY               = 3100 ///< Directory生成で失敗
-,   E_CDM_ERROR_OPEN_FIELDDATA              = 3101 ///< フィールドデータのオープンに失敗
-,   E_CDM_ERROR_WRITE_FIELD_HEADER_RECORD   = 3102 ///< フィールドヘッダーレコード出力失敗
-,   E_CDM_ERROR_WRITE_FIELD_DATA_RECORD     = 3103 ///< フィールドデータレコード出力失敗
-,   E_CDM_ERROR_WRITE_FIELD_AVERAGED_RECORD = 3104 ///< フィールドAverage出力失敗
-,   E_CDM_ERROR_WRITE_SPH_REC1              = 3201 ///< SPHファイルレコード1出力エラー
-,   E_CDM_ERROR_WRITE_SPH_REC2              = 3202 ///< SPHファイルレコード2出力エラー
-,   E_CDM_ERROR_WRITE_SPH_REC3              = 3203 ///< SPHファイルレコード3出力エラー
-,   E_CDM_ERROR_WRITE_SPH_REC4              = 3204 ///< SPHファイルレコード4出力エラー
-,   E_CDM_ERROR_WRITE_SPH_REC5              = 3205 ///< SPHファイルレコード5出力エラー
-,   E_CDM_ERROR_WRITE_SPH_REC6              = 3206 ///< SPHファイルレコード6出力エラー
-,   E_CDM_ERROR_WRITE_SPH_REC7              = 3207 ///< SPHファイルレコード7出力エラー
-,   E_CDM_ERROR_WRITE_PROCFILENAME_EMPTY    = 3500 ///< proc dfi ファイル名が未定義
-,   E_CDM_ERROR_WRITE_PROCFILE_OPENERROR    = 3501 ///< proc dfi ファイルオープン失敗
-,   E_CDM_ERROR_WRITE_DOMAIN                = 3502 ///< Domain出力失敗
-,   E_CDM_ERROR_WRITE_MPI                   = 3503 ///< MPI出力失敗
-,   E_CDM_ERROR_WRITE_PROCESS               = 3504 ///< Process出力失敗
-,   E_CDM_ERROR_WRITE_RANKID                = 3505 ///< 出力ランク以外
-,   E_CDM_ERROR_WRITE_INDEXFILENAME_EMPTY   = 3510 ///< index dfi ファイル名が未定義
-,   E_CDM_ERROR_WRITE_PREFIX_EMPTY          = 3511 ///< Prefixが未定義
-,   E_CDM_ERROR_WRITE_INDEXFILE_OPENERROR   = 3512 ///< proc dfi ファイルオープン失敗
-,   E_CDM_ERROR_WRITE_FILEINFO              = 3513 ///< FileInfo出力失敗
-,   E_CDM_ERROR_WRITE_UNIT                  = 3514 ///< Unit出力失敗
-,   E_CDM_ERROR_WRITE_TIMESLICE             = 3515 ///< TimeSlice出力失敗
-,   E_CDM_ERROR_WRITE_FILEPATH              = 3516 ///< FilePath出力失敗
-,   E_CDM_ERROR_WRITE_VISIT                 = 3517 ///< Visit出力失敗
-,   E_CDM_ERROR_WRITE_GRIDFILE              = 3518 ///< gridファイル出力失敗
-,   E_CDM_WARN_GETUNIT                      = 4000 ///< Unitの単位がない
+    E_CDM_SUCCESS                                = 1    ///< 正常終了
+,   E_CDM_ERROR                                  = -1   ///< エラー終了
+,   E_CDM_ERROR_READ_DFI_GLOBALORIGIN            = 1000 ///< DFI GlobalOrigin 読込みエラー
+,   E_CDM_ERROR_READ_DFI_GLOBALREGION            = 1001 ///< DFI GlobalRegion 読込みエラー
+,   E_CDM_ERROR_READ_DFI_GLOBALVOXEL             = 1002 ///< DFI GlobalVoxel 読込みエラー
+,   E_CDM_ERROR_READ_DFI_GLOBALDIVISION          = 1003 ///< DFI GlobalDivision 読込みエラー
+,   E_CDM_ERROR_READ_DFI_DIRECTORYPATH           = 1004 ///< DFI DirectoryPath 読込みエラー
+,   E_CDM_ERROR_READ_DFI_TIMESLICEDIRECTORY      = 1005 ///< DFI TimeSliceDirectoryPath 読込みエラー
+,   E_CDM_ERROR_READ_DFI_PREFIX                  = 1006 ///< DFI Prefix 読込みエラー
+,   E_CDM_ERROR_READ_DFI_FILEFORMAT              = 1007 ///< DFI FileFormat 読込みエラー
+,   E_CDM_ERROR_READ_DFI_GUIDECELL               = 1008 ///< DFI GuideCell 読込みエラー
+,   E_CDM_ERROR_READ_DFI_DATATYPE                = 1009 ///< DFI DataType 読込みエラー
+,   E_CDM_ERROR_READ_DFI_ENDIAN                  = 1010 ///< DFI Endian 読込みエラー
+,   E_CDM_ERROR_READ_DFI_NUMVARIABLES            = 1012 ///< DFI NumVariables 読込みエラー
+,   E_CDM_ERROR_READ_DFI_FILEPATH_PROCESS        = 1013 ///< DFI FilePath/Process 読込みエラー
+,   E_CDM_ERROR_READ_DFI_NO_RANK                 = 1014 ///< DFI Rank要素なし
+,   E_CDM_ERROR_READ_DFI_ID                      = 1015 ///< DFI ID 読込みエラー
+,   E_CDM_ERROR_READ_DFI_HOSTNAME                = 1016 ///< DFI HoatName 読込みエラー
+,   E_CDM_ERROR_READ_DFI_VOXELSIZE               = 1017 ///< DFI VoxelSize 読込みエラー
+,   E_CDM_ERROR_READ_DFI_HEADINDEX               = 1018 ///< DFI HeadIndex 読込みエラー
+,   E_CDM_ERROR_READ_DFI_TAILINDEX               = 1019 ///< DFI TailIndex 読込みエラー
+,   E_CDM_ERROR_READ_DFI_CELLID                  = 1020 ///< DFI CellID 読込みエラー
+,   E_CDM_ERROR_READ_DFI_BCFLAGID                = 1021 ///< DFI BCflagID 読込みエラー
+,   E_CDM_ERROR_READ_DFI_NO_SLICE                = 1022 ///< DFI TimeSlice要素なし
+,   E_CDM_ERROR_READ_DFI_STEP                    = 1023 ///< DFI Step 読込みエラー
+,   E_CDM_ERROR_READ_DFI_TIME                    = 1024 ///< DFI Time 読込みエラー
+,   E_CDM_ERROR_READ_DFI_NO_MINMAX               = 1025 ///< DFI MinMax要素なし
+,   E_CDM_ERROR_READ_DFI_MIN                     = 1026 ///< DFI Min 読込みエラー
+,   E_CDM_ERROR_READ_DFI_MAX                     = 1027 ///< DFI Max 読込みエラー
+,   E_CDM_ERROR_READ_DFI_DFITYPE                 = 1028 ///< DFI DFIType 読込みエラー
+,   E_CDM_ERROR_READ_DFI_FIELDFILENAMEFORMAT     = 1029 ///< DFI FieldfilenameFormat 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILE          = 1030 ///< DFI Coordinate File 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILETYPE      = 1031 ///< DFI Coordinate File Type 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILEPRECISION = 1032 ///< DFI Coordinate File Precision 読込みエラー
+,   E_CDM_ERROR_READ_DFI_COORDINATEFILEENDIAN    = 1033 ///< DFI Coordinate File Endian 読込みエラー
+,   E_CDM_ERROR_OPEN_COORDINATEFILE              = 1034 ///< Coordinate File オープンに失敗
+,   E_CDM_ERROR_READ_COORDINATEFILE              = 1035 ///< Coordinate File 読込みエラー
+,   E_CDM_ERROR_READ_INDEXFILE_OPENERROR         = 1050 ///< Indexファイルオープンエラー
+,   E_CDM_ERROR_TEXTPARSER                       = 1051 ///< TextParserエラー
+,   E_CDM_ERROR_READ_FILEINFO                    = 1052 ///< FileInfo読込みエラー
+,   E_CDM_ERROR_READ_FILEPATH                    = 1053 ///< FilePath読込みエラー
+,   E_CDM_ERROR_READ_UNIT                        = 1054 ///< UNIT読込みエラー
+,   E_CDM_ERROR_READ_TIMESLICE                   = 1055 ///< TimeSlice読込みエラー
+,   E_CDM_ERROR_READ_PROCFILE_OPENERROR          = 1056 ///< Procファイルオープンエラー
+,   E_CDM_ERROR_READ_DOMAIN                      = 1057 ///< Domain読込みエラー
+,   E_CDM_ERROR_READ_MPI                         = 1058 ///< MPI読込みエラー
+,   E_CDM_ERROR_READ_PROCESS                     = 1059 ///< Process読込みエラー
+,   E_CDM_ERROR_READ_FIELDDATA_FILE              = 1900 ///< フィールドデータファイル読込みエラー
+,   E_CDM_ERROR_READ_SPH_FILE                    = 2000 ///< SPHファイル読込みエラー
+,   E_CDM_ERROR_READ_SPH_REC1                    = 2001 ///< SPHファイルレコード1読込みエラー
+,   E_CDM_ERROR_READ_SPH_REC2                    = 2002 ///< SPHファイルレコード2読込みエラー
+,   E_CDM_ERROR_READ_SPH_REC3                    = 2003 ///< SPHファイルレコード3読込みエラー
+,   E_CDM_ERROR_READ_SPH_REC4                    = 2004 ///< SPHファイルレコード4読込みエラー
+,   E_CDM_ERROR_READ_SPH_REC5                    = 2005 ///< SPHファイルレコード5読込みエラー
+,   E_CDM_ERROR_READ_SPH_REC6                    = 2006 ///< SPHファイルレコード6読込みエラー
+,   E_CDM_ERROR_READ_SPH_REC7                    = 2007 ///< SPHファイルレコード7読込みエラー
+,   E_CDM_ERROR_UNMATCH_VOXELSIZE                = 2050 ///< SPHのボクセルサイズとDFIのボクセルサイズが合致しない
+,   E_CDM_ERROR_NOMATCH_ENDIAN                   = 2051 ///< 出力Fornatが合致しない（Endian形式がBig,Little以外）
+,   E_CDM_ERROR_UNMATCH_NUM_OF_VARIABLES         = 2052 ///< フィールドデータの変数の個数と登録された変数名の個数が合致しない
+,   E_CDM_ERROR_NUM_OF_GUIDECELLS                = 2053 ///< フィールドデータのガイドセル値エラー
+,   E_CDM_ERROR_READ_BOV_FILE                    = 2100 ///< BOVファイル読込みエラー
+,   E_CDM_ERROR_READ_FIELD_HEADER_RECORD         = 2102 ///< フィールドヘッダーレコード読込み失敗
+,   E_CDM_ERROR_READ_FIELD_DATA_RECORD           = 2103 ///< フィールドデータレコード読込み失敗
+,   E_CDM_ERROR_READ_FIELD_AVERAGED_RECORD       = 2104 ///< フィールドAverage読込み失敗
+//,   E_CDM_ERROR_DATATYPE                         = 2500 ///< DataType error
+,   E_CDM_ERROR_MISMATCH_NP_SUBDOMAIN            = 3003 ///< 並列数とサブドメイン数が一致していない
+,   E_CDM_ERROR_INVALID_DIVNUM                   = 3011 ///< 領域分割数が不正
+,   E_CDM_ERROR_OPEN_SBDM                        = 3012 ///< ActiveSubdomainファイルのオープンに失敗
+,   E_CDM_ERROR_READ_SBDM_HEADER                 = 3013 ///< ActiveSubdomainファイルのヘッダー読み込みに失敗
+,   E_CDM_ERROR_READ_SBDM_FORMAT                 = 3014 ///< ActiveSubdomainファイルのフォーマットエラー
+,   E_CDM_ERROR_READ_SBDM_DIV                    = 3015 ///< ActiveSubdomainファイルの領域分割数読み込みに失敗
+,   E_CDM_ERROR_READ_SBDM_CONTENTS               = 3016 ///< ActiveSubdomainファイルのContents読み込みに失敗
+,   E_CDM_ERROR_SBDM_NUMDOMAIN_ZERO              = 3017 ///< ActiveSubdomainファイルの活性ドメイン数が0
+,   E_CDM_ERROR_MAKEDIRECTORY                    = 3100 ///< Directory生成で失敗
+,   E_CDM_ERROR_OPEN_FIELDDATA                   = 3101 ///< フィールドデータのオープンに失敗
+,   E_CDM_ERROR_WRITE_FIELD_HEADER_RECORD        = 3102 ///< フィールドヘッダーレコード出力失敗
+,   E_CDM_ERROR_WRITE_FIELD_DATA_RECORD          = 3103 ///< フィールドデータレコード出力失敗
+,   E_CDM_ERROR_WRITE_FIELD_AVERAGED_RECORD      = 3104 ///< フィールドAverage出力失敗
+,   E_CDM_ERROR_WRITE_SPH_REC1                   = 3201 ///< SPHファイルレコード1出力エラー
+,   E_CDM_ERROR_WRITE_SPH_REC2                   = 3202 ///< SPHファイルレコード2出力エラー
+,   E_CDM_ERROR_WRITE_SPH_REC3                   = 3203 ///< SPHファイルレコード3出力エラー
+,   E_CDM_ERROR_WRITE_SPH_REC4                   = 3204 ///< SPHファイルレコード4出力エラー
+,   E_CDM_ERROR_WRITE_SPH_REC5                   = 3205 ///< SPHファイルレコード5出力エラー
+,   E_CDM_ERROR_WRITE_SPH_REC6                   = 3206 ///< SPHファイルレコード6出力エラー
+,   E_CDM_ERROR_WRITE_SPH_REC7                   = 3207 ///< SPHファイルレコード7出力エラー
+,   E_CDM_ERROR_WRITE_PROCFILENAME_EMPTY         = 3500 ///< proc dfi ファイル名が未定義
+,   E_CDM_ERROR_WRITE_PROCFILE_OPENERROR         = 3501 ///< proc dfi ファイルオープン失敗
+,   E_CDM_ERROR_WRITE_DOMAIN                     = 3502 ///< Domain出力失敗
+,   E_CDM_ERROR_WRITE_MPI                        = 3503 ///< MPI出力失敗
+,   E_CDM_ERROR_WRITE_PROCESS                    = 3504 ///< Process出力失敗
+,   E_CDM_ERROR_WRITE_RANKID                     = 3505 ///< 出力ランク以外
+,   E_CDM_ERROR_WRITE_INDEXFILENAME_EMPTY        = 3510 ///< index dfi ファイル名が未定義
+,   E_CDM_ERROR_WRITE_PREFIX_EMPTY               = 3511 ///< Prefixが未定義
+,   E_CDM_ERROR_WRITE_INDEXFILE_OPENERROR        = 3512 ///< proc dfi ファイルオープン失敗
+,   E_CDM_ERROR_WRITE_FILEINFO                   = 3513 ///< FileInfo出力失敗
+,   E_CDM_ERROR_WRITE_UNIT                       = 3514 ///< Unit出力失敗
+,   E_CDM_ERROR_WRITE_TIMESLICE                  = 3515 ///< TimeSlice出力失敗
+,   E_CDM_ERROR_WRITE_FILEPATH                   = 3516 ///< FilePath出力失敗
+,   E_CDM_ERROR_WRITE_VISIT                      = 3517 ///< Visit出力失敗
+,   E_CDM_ERROR_WRITE_GRIDFILE                   = 3518 ///< gridファイル出力失敗
+,   E_CDM_WARN_GETUNIT                           = 4000 ///< Unitの単位がない
   };
 
 };
